# foxhole-artillery-planner

./: .dockerignore  .gitignore  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  notes.md  package-lock.json  package.json  playwright.config.ts
assets/: maps.json  weapons.json
crates/backend/: Cargo.toml
crates/backend/src/: assets.rs  main.rs
crates/backend/src/graphql/: mod.rs
crates/backend/src/storage/: mod.rs
crates/frontend/: Cargo.toml  Dioxus.toml  index.html
crates/frontend/assets/: main.css
crates/frontend/src/: api.rs  coords.rs  main.rs
crates/frontend/src/components/: calculation_display.rs  help_overlay.rs  map_view.rs  mod.rs  plan_panel.rs  weapon_selector.rs  wind_input.rs
crates/frontend/src/pages/: planner.rs
crates/shared/: Cargo.toml
crates/shared/src/: calc.rs  grid.rs  lib.rs  models.rs
crates/shitpost-gen/: Cargo.toml  README.md
crates/shitpost-gen/src/: main.rs
e2e/: planner.spec.ts
misc_scripts/: extract_hexes_from_pak_file.py
